--- a/index.html
+++ b/index.html
@@ -1,178 +1,1 @@
-<!DOCTYPE html>
-<!--[if lt IE 9 ]><html class="no-js oldie" lang=en> <![endif]-->
-<!--[if IE 9 ]><html class="no-js oldie ie9" lang=en> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!-->
-<html class=no-js lang=en>
-<!--<![endif]-->
-<head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117499800-1"></script>
-    <script>window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments) } gtag("js", new Date()); gtag("config", "UA-117499800-1");</script>
-    <meta charset=utf-8>
-    <title>Almanac Enterprise Networks | Connecting You.</title>
-    <meta name=description
-        content="Welcome to Almanac Enterprise Networks. Helping out your business in the online world.">
-    <meta name=author content="Almanac Enterprise Networks">
-    <meta name=viewport content="width=device-width, initial-scale=1">
-    <link rel=stylesheet href=assets/base.css>
-    <link rel=stylesheet href=assets/vendor.css>
-    <link rel=stylesheet href=assets/main.css>
-    <script src=assets/modernizr.js></script>
-    <link rel=apple-touch-icon sizes=57x57 href=/apple-icon-57x57.png>
-    <link rel=apple-touch-icon sizes=60x60 href=/apple-icon-60x60.png>
-    <link rel=apple-touch-icon sizes=72x72 href=/apple-icon-72x72.png>
-    <link rel=apple-touch-icon sizes=76x76 href=/apple-icon-76x76.png>
-    <link rel=apple-touch-icon sizes=114x114 href=/apple-icon-114x114.png>
-    <link rel=apple-touch-icon sizes=120x120 href=/apple-icon-120x120.png>
-    <link rel=apple-touch-icon sizes=144x144 href=/apple-icon-144x144.png>
-    <link rel=apple-touch-icon sizes=152x152 href=/apple-icon-152x152.png>
-    <link rel=apple-touch-icon sizes=180x180 href=/apple-icon-180x180.png>
-    <link rel=icon type=image/png sizes=192x192 href=/android-icon-192x192.png>
-    <link rel=icon type=image/png sizes=32x32 href=/favicon-32x32.png>
-    <link rel=icon type=image/png sizes=96x96 href=/favicon-96x96.png>
-    <link rel=icon type=image/png sizes=16x16 href=/favicon-16x16.png>
-    <link rel=manifest href=/manifest.json>
-    <meta name=msapplication-TileColor content=#ffffff>
-    <meta name=msapplication-TileImage content=/ms-icon-144x144.png>
-    <meta name=theme-color content=#ffffff>
-</head>
-
-<body id=top>
-    <header class=s-header>
-        <div class=header-logo>
-            <a class=site-logo href=index.html>
-                <img src=images/logo.png alt="Almanac Enterprise Networks (Logo)">
-            </a>
-        </div>
-    </header>
-    <section id=home class="s-home target-section" data-parallax=scroll data-image-src=images/hero-bg.jpg
-        data-natural-width=3000 data-natural-height=2000 data-position-y=center>
-        <div class=overlay></div>
-        <div class=shadow-overlay></div>
-        <div class=home-content>
-            <div class="row home-content__main">
-                <h3>Welcome to Almanac Enterprise Networks</h3>
-                <h1>
-                    Helping out your business <br>
-                    in the online world. <br>
-                </h1>
-                <div class=home-content__buttons>
-                    <a href=#services class="smoothscroll btn btn--stroke">What we do</a>
-                    <a href=#contact class="smoothscroll btn btn--stroke">Contact Us</a>
-                </div>
-            </div>
-            <div class=home-content__scroll>
-                <a href=#services class="scroll-link smoothscroll">
-                    <span>What we do</span>
-                </a>
-            </div>
-            <div class=home-content__line></div>
-        </div>
-    </section>
-    <section id=services class=s-services>
-        <div class="row section-header has-bottom-sep" data-aos=fade-up>
-            <div class=col-full>
-                <h3 class=subhead>What We Do</h3>
-                <h1 class=display-2>Here are some of the ways we can help you and your business</h1>
-            </div>
-        </div>
-        <div class="row services-list block-1-2 block-tab-full">
-            <div class="col-block service-item" data-aos=fade-up>
-                <div class=service-icon>
-                    <i class="fa fa-server"></i>
-                </div>
-                <div class=service-text>
-                    <h3 class=h2>Network installtion, setup and support.</h3>
-                    <p>We specialise in enterprise networking. Need a network solution for your business? Or maybe an
-                        upgrade to your exsisting one? Get in touch to learn more.</p>
-                </div>
-            </div>
-            <div class="col-block service-item" data-aos=fade-up>
-                <div class=service-icon>
-                    <i class="fa fa-code"></i>
-                </div>
-                <div class=service-text>
-                    <h3 class=h2>Website creation and hosting.</h3>
-                    <p>We can design, build and even host your website for you. Get in touch with us for hosting prices.
-                        (Billed per site or per domain, conditions apply.)</p>
-                </div>
-            </div>
-            <div class="col-block service-item" data-aos=fade-up>
-                <div class=service-icon>
-                    <i class="fa fa-paint-brush"></i>
-                </div>
-                <div class=service-text>
-                    <h3 class=h2>Logos, wallpapers and promotional material.</h3>
-                    <p>We can design or customise existing logos create wallpapers and even promotional material. This
-                        can be something as simple as a banner for a social media profile to a full promotional video
-                        for online use.</p>
-                </div>
-            </div>
-            <div class="col-block service-item" data-aos=fade-up>
-                <div class=service-icon>
-                    <i class="fa fa-user-secret"></i>
-                </div>
-                <div class=service-text>
-                    <h3 class=h2>System security and network analysis.</h3>
-                    <p>Are you concerned about the current security of your network? We can do a remote or onsite
-                        analysis of your current system or network. If a flaw is found or a best practise is not
-                        observed we can fix and secure your system and / or network.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id=contact class=s-contact>
-        <div class=overlay></div>
-        <div class=contact__line></div>
-        <div class="row section-header" data-aos=fade-up>
-            <div class=col-full>
-                <h3 class=subhead>Contact Us</h3>
-                <h1 class="display-2 display-2--light">How can we help?</h1>
-            </div>
-        </div>
-        <div class="row contact-content" data-aos=fade-up>
-            <div class=contact-secondary>
-                <div class=contact-info>
-                    <h3 class="h6 hide-on-fullwidth">Contact Info</h3>
-                    <div class=cinfo>
-                        <h5>Email Us At</h5>
-                        <p>enquiries@aenetworks.com.au</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <footer>
-        <div class="row footer-main">
-            <div class="col-six tab-full left footer-desc">
-            </div>
-        </div>
-        <div class="row footer-bottom">
-            <div class=col-twelve>
-                <div class=copyright>
-                    <span>© Almanac Enterprise Networks 2020 | <a href="mailto:webmaster@aenetworks.com.au">Contact
-                            Webmaster</a>
-                    </span>
-                </div>
-                <div class=go-top>
-                    <a class=smoothscroll title="Back to Top" href=#top><i class=icon-arrow-up aria-hidden=true></i></a>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <div id=preloader>
-        <div id=loader>
-            <div class=line-scale-pulse-out>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-        </div>
-    </div>
-    <script src=assets/jquery-3.2.1.min.js></script>
-    <script src=assets/plugins.js></script>
-    <script src=assets/main.js></script>
-</body>
-
-</html>
+<p>This URL is used for Active Directory purposes.</p>
