--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<p>This URL is used for Active Directory purposes.</p>
+<html>
+    <head>
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  
+    </head>
+    <body>
+        <p>This URL is used for Active Directory purposes.</p>
+    </body>
+</html> 
